fix: make search bar visible by removing opacity:0

--- a/frontend/src/Components/Navbar/navbar.css
+++ b/frontend/src/Components/Navbar/navbar.css
@@ -2,8 +2,6 @@
     padding: 14px 210px 14px 36px;
     gap: 10px;
     border-radius: 12px;
-    opacity: 0px;
-
 }
 
 
@@ -15,9 +13,9 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-
 }
 
 .icon-size {
-    width: 27px;
+    width: 24px;
+    height: 24px;
 }
